fix(OUT-2509): made max height of description compatible on mobiles

--- a/src/app/tapwrite.css
+++ b/src/app/tapwrite.css
@@ -51,7 +51,7 @@
 
 .tapwrite-description-h-full {
   min-height: 10vh;
-  max-height: 66vh;
+  max-height: 60vh;
   overflow: auto;
   background-color: #ffffff;
 }
